# mysql-connector-cpp

./: .bzrignore  .gitignore  .gitmodules  ANNOUNCEMENT  ANNOUNCEMENT_102_ALPHA  ANNOUNCEMENT_103_ALPHA  ANNOUNCEMENT_104_BETA  ANNOUNCEMENT_105_GA  ANNOUNCEMENT_110_GA  ANNOUNCEMENT_111_GA  ANNOUNCEMENT_DRAFT  BUILDINFO.in  CHANGES  CMakeLists.txt  CONTRIBUTING.md  COPYING  CTestConfig.cmake  FindMySQL.cm  FindMySQL.cmake  INFO_BIN.in  INSTALL  LICENSE  LICENSE.txt  Licenses_for_Third-Party_Components.txt  PackageSpecs.cmake  README  README.cmake.in  README.txt  VersionInfo.cmake  VersionInfo.cmake.in  buildinfo.cmake  changeCrt.cmake  config.cmake  config.h.in  extract_build_info.php  global.h  install_layout.cmake  jdbc.cmake  mysql-concpp-config-version.cmake.in  mysql-concpp-config.cmake.in  (+3 more)
cdk/: CMakeLists.txt  CTestConfig.cmake  SubProject.cmake  config.h.in  try.cc
cdk/cmake/: DepFindCompression.cmake  DepFindCoverage.cmake  DepFindOtel.cmake  DepFindProtobuf.cmake  DepFindRapidJSON.cmake  DepFindSSL.cmake  FindMySQL.cmake  FindSphinx.cmake  boost.cmake  bootstrap.cmake  cmake_parse_arguments.cmake  compile_flags.cmake  compiler.cmake  config.cmake  config_header.cmake  config_options.cmake  dependency.cmake  gcov.cmake  gtest.cmake  headers.cmake  install_macros.cmake  libutils.cmake  merge_archives.cmake  msvc.cmake  platform.cmake  protobuf.cmake  setup.cmake  ssl.cmake  testing.cmake  utils.cmake
cdk/core/: CMakeLists.txt  codec.cc  session.cc
cdk/doc/: CMakeLists.txt  cdk.rst  conf.py  usage.rst
cdk/extra/: CMakeLists.txt  setup.cmake
cdk/foundation/: CMakeLists.txt  asio.h  boost_code.cc  connection_openssl.cc  connection_tcpip.cc  connection_tcpip_base.h  connection_yassl.cc  diagnostics.cc  error.cc  socket.cc  socket_detail.cc  socket_detail.h  stream.cc  string.cc
cdk/include/: CMakeLists.txt
cdk/mysqlx/: CMakeLists.txt  auth_hash.cc  auth_mysql41.cc  auth_mysql41.h  converters.h  delayed_op.h  result.cc  session.cc  stmt.h
cdk/parser/: CMakeLists.txt  char_iterator.h  expr_parser.cc  expr_parser.h  json_parser.cc  json_parser.h  parser.h  tokenizer.cc  tokenizer.h  uri_parser.cc  uri_parser.h
cdk/protobuf/: CMakeLists.txt
cdk/protocol/: CMakeLists.txt
connector/: CMakeLists.txt  collection_crud.cc  crud.cc  document.cc  impl.h  result.cc  session.cc  table_crud.cc
connector/tests/: CMakeLists.txt  batch-t.cc  crud-t.cc  ddl-t.cc  first-t.cc  session-t.cc  types-t.cc
cppconn/: CMakeLists.txt  api.h  build_config.h  config.h.cm  connection.h  datatype.h  driver.h  exception.h  metadata.h  parameter_metadata.h  prepared_statement.h  resultset.h  resultset_metadata.h  sqlstring.h  statement.h  variant.h  version_info.h.cmake  warning.h
devapi/: CMakeLists.txt  collection_crud.cc  crud.cc  document.cc  impl.h  result.cc  result_impl.h  session.cc  table_crud.cc
devapi/tests/: CMakeLists.txt  batch-t.cc  bugs-t.cc  crud-t.cc  ddl-t.cc  first-t.cc  session-t.cc  test.h  types-t.cc
doc/: CMakeLists.txt  DoxygenLayout.xml.in  building.txt  coding.rst  conf.py  conf.py.in  devapi_ref.txt  doxygen.cfg  doxygen.cfg.in  footer.html  index.rst  index.txt  indexing.txt  jdbc_ref.txt  sample.txt  usage.rst  usage.txt  xapi_ref.txt
doc/xapi/: CMakeLists.txt  build.txt  concept.txt  conn_build.txt  doxygen.cfg  index.txt  json.txt  sample.c  sample.txt
driver/: CMakeLists.txt  class_stats.php  mysql_art_resultset.cpp  mysql_art_resultset.h  mysql_art_rset_metadata.cpp  mysql_art_rset_metadata.h  mysql_client_api.cpp  mysql_client_api.h  mysql_client_loader.cpp  mysql_client_loader.h  mysql_client_static.cpp  mysql_client_static.h  mysql_connection.cpp  mysql_connection.h  mysql_connection_data.h  mysql_connection_options.h  mysql_constructed_resultset.cpp  mysql_constructed_resultset.h  mysql_cset_metadata.cpp  mysql_cset_metadata.h  mysql_debug.cpp  mysql_debug.h  mysql_driver.cpp  mysql_driver.h  mysql_error.h  mysql_lib_loader.cpp  mysql_lib_loader.h  mysql_metadata.cpp  mysql_metadata.h  mysql_parameter_metadata.cpp  mysql_parameter_metadata.h  mysql_prepared_statement.cpp  mysql_prepared_statement.h  mysql_private_iface.h  mysql_ps_resultset.cpp  mysql_ps_resultset.h  mysql_ps_resultset_metadata.cpp  mysql_ps_resultset_metadata.h  mysql_public_iface.h  mysql_res_wrapper.cpp  (+19 more)
driver/nativeapi/: binding_config.h.cm  connection_proxy.h  libmysql_dynamic_proxy.cpp  libmysql_dynamic_proxy.h  libmysql_static_proxy.cpp  libmysql_static_proxy.h  library_loader.cpp  library_loader.h  mysql_client.cpp  mysql_client_api.cpp  mysql_client_api.h  mysql_client_loader.h  mysql_client_loader.inc  mysql_client_static.h  mysql_client_static.inc  mysql_connection_proxy.cpp  mysql_connection_proxy.h  (+21 more)
examples/: CMakeLists.txt  connect.cpp  connection_meta_schemaobj.cpp  cpp_trace_analyzer.php  debug.cpp  debug_output.cpp  dynamic_load.cpp  examples.h  exceptions.cpp  prepared_statement.cpp  pthreads.cpp  resultset.cpp  resultset_binary.cpp  resultset_meta.cpp  resultset_types.cpp  standalone_example.cpp  standalone_example_docs1.cpp  standalone_example_docs2.cpp  statement.cpp
include/: CMakeLists.txt  common.h  document.h  mysql_classic.h  mysql_common.h  mysql_devapi.h  mysql_xapi.h  mysqlx.h  mysqlxx.h  result.h  task.h
jdbc/: CMakeLists.txt  PackageSpecs.cmake  README  VersionInfo.cmake.in  changeCrt.cmake  install_layout.cmake
test/: CMakeLists.txt  README  driver_test.cpp  static_test.cpp  test.cc  test_common.cpp  tests_config.h.in
testapp/: CMakeLists.txt  devapi_test.cc  jdbc_test.cc  test.cc  xapi_test.c
testing/: CMakeLists.txt  abi-check.cmake  abi2-32.map  abi2-64.map  test.h  test_harness.cc  tests.cmake
thread/: CMakeLists.txt  my_no_pthread.h  my_pthread.c  my_pthread.h  my_thr_init.c  my_wincond.c  my_winthread.c  thr_alarm.h  thr_mutex.c
xapi/: CMakeLists.txt  collection.cc  compat.cc  compat_internal.h  crud.cc  crud_internal.h  def_internal.h  error_internal.h  mysqlx.cc  mysqlx.def  mysqlx_cc_internal.h  ref_internal.h  result.cc  row.cc  row_internal.h  schema.cc  session.cc  table.cc  view.cc  view_internal.h
(+730 files in other folders)
